--- a/src/UniNotifier_ru_ru.resx
+++ b/src/UniNotifier_ru_ru.resx
@@ -207,4 +207,26 @@
   <data name="AlreadyStarted" xml:space="preserve">
     <value>Программа {0:S} уже запущена</value>
   </data>
+  <data name="GMJAgreement" xml:space="preserve">
+    <value>Существует огромное количество групп и сообществ, коллекционирующих юмор во всех его формах. Но вряд ли многие из них могут похвастаться грамотностью текстов и подписей. И речь не о случаях, когда именно её отсутствие есть основа для шутки. И это может быть даже не их вина – при огромном количестве скриншотов вместо обычных записей этого в принципе сложно добиться.
+
+Что ж, попробую это исправить. Уже долгое время я на досуге собираю понравившиеся записи, перерабатываю их в приятный глазу вид и выкладываю на своей стене. Просто так, чтобы отвлечься от текучки. И, кажется, пришло время вынести огромный, образовавшийся за почти семь лет запас в общий доступ.
+
+Казалось бы, зачем это нужно? И всё-таки результат того сто́ит. Контент от этих манипуляций становится только лучше. Но при этом возвращаются возможность текстового поиска по знакомым словам и скорость загрузки на особо медленных девайсах. В общем-то, неплохое достижение. К тому же, благодаря долгому отбору в моей коллекции остались лишь самые «стойкие» экспонаты.
+
+Итак, добро пожаловать в Grammar must joy!
+
+Несколько правил (обратите внимание, что они будут считаться принятыми Вами при повторном нажатии кнопки «GMJ»):
+
+1. Да, контент не всегда будет (читайте: почти никогда не будет) оригинальным. И если я вдруг окажусь на пути чьего-нибудь копирайта, прошу меня об этом извещать. Такой контент нам... будет изыматься из ленты.
+
+2. Записи могут быть разными. Конечно, без шока, браззерс и прочей неразрешёнки. Но всё-таки 18+!
+
+3. Если я всё же где-то ошибусь (что немало вероятно), прошу также мне об этом сообщать. При таком названии группы не хочется ударять в грязь лицом.
+
+4. Мы следуем Политике сообществ (https://vk.com/@rdaaow_fupl-scp). Поэтому рекламы в обозримом будущем здесь не будет. Да и комментарии тут ни к чему. Но советы, пожелания и конструктивная критика приветствуются.
+
+Очень надеюсь, что Вам понравится относительно грамотный юмор!
+С уважением, Nicolay B. aka RD AAOW</value>
+  </data>
 </root>
