--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -136,7 +136,7 @@
     <value>Светодиод</value>
   </data>
   <data name="AllowOnLockedScreenSwitch" xml:space="preserve">
-    <value>Текст на заблок. экране</value>
+    <value>Текст на экране блокировки</value>
   </data>
   <data name="AllowSoundSwitch" xml:space="preserve">
     <value>Звук</value>
@@ -167,6 +167,9 @@
   </data>
   <data name="CommandButton2" xml:space="preserve">
     <value>Настройки</value>
+  </data>
+  <data name="CompleteResetSwitch" xml:space="preserve">
+    <value>Пропускать неизменившиеся тексты в опции «Опросить все»</value>
   </data>
   <data name="CurlyTemplate" xml:space="preserve">
     <value>Не забудьте заменить элементы, заключённые в фигурные скобки, на то, что Вам нужно</value>
@@ -310,6 +313,9 @@
   </data>
   <data name="SolutionPage" xml:space="preserve">
     <value>Настройки оповещений</value>
+  </data>
+  <data name="SpecialNotificationsSwitch" xml:space="preserve">
+    <value>Получать оповещения с tablepedia.com</value>
   </data>
   <data name="TemplateButton" xml:space="preserve">
     <value>Шаблон</value>
