--- a/src/android/UniNotifier_en_us.resx
+++ b/src/android/UniNotifier_en_us.resx
@@ -222,8 +222,8 @@
     <value>;
 • Set up notification sound, vibro, lights and visibility in system menu</value>
   </data>
-  <data name="LinkFieldLabel" xml:space="preserve">
-    <value>Link:</value>
+  <data name="LinkFieldPlaceholder" xml:space="preserve">
+    <value>(URL)</value>
   </data>
   <data name="LogPage" xml:space="preserve">
     <value>Notifications log</value>
@@ -231,11 +231,17 @@
   <data name="LogSettingsLabel" xml:space="preserve">
     <value>Log settings:</value>
   </data>
+  <data name="MainLogPlaceholder" xml:space="preserve">
+    <value>(no notifications yet)</value>
+  </data>
   <data name="ManualPage" xml:space="preserve">
     <value>User manual</value>
   </data>
   <data name="NameFieldLabel" xml:space="preserve">
-    <value>Name:</value>
+    <value>Name and link:</value>
+  </data>
+  <data name="NameFieldPlaceholder" xml:space="preserve">
+    <value>(name)</value>
   </data>
   <data name="NextButton" xml:space="preserve">
     <value>OK</value>
@@ -301,12 +307,13 @@
   <data name="Tip01" xml:space="preserve">
     <value>Here you can configure notifications settings.
 
-Note that going to settings and full texts will pause the background service. It will continue working after closing / hiding the settings form</value>
+Going to settings and full texts will pause the background service. It will continue working after closing / hiding the settings window</value>
   </data>
   <data name="Tip02" xml:space="preserve">
     <value>WARNING!
-1. App can only receive notifications if your device is plugged in and / or the screen is not in sleep mode.
-2. Some devices require manual setting of notification attributes (vibro, lights, sounds). App settings may not work</value>
+1. App can only receive notifications if your device is on charge and / or the screen is not in sleep mode.
+2. Some devices require manual setting of notification attributes (vibro, lights, sounds). App settings may not work.
+3. Some devices require manual unlocking of internet access (f.e., in case of internet traffic saving mode) for the app</value>
   </data>
   <data name="Tip03" xml:space="preserve">
     <value>For using this function specify some keyword from needed site's area in “Beginning” field</value>
