--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -244,8 +244,8 @@
     <value>;
 • Настройте звук, виброотклик, световую индикацию и видимость в системном меню</value>
   </data>
-  <data name="LinkFieldLabel" xml:space="preserve">
-    <value>Ссылка:</value>
+  <data name="LinkFieldPlaceholder" xml:space="preserve">
+    <value>(URL)</value>
   </data>
   <data name="LogPage" xml:space="preserve">
     <value>Журнал оповещений</value>
@@ -253,11 +253,17 @@
   <data name="LogSettingsLabel" xml:space="preserve">
     <value>Настройки журнала:</value>
   </data>
+  <data name="MainLogPlaceholder" xml:space="preserve">
+    <value>(уведомлений пока нет)</value>
+  </data>
   <data name="ManualPage" xml:space="preserve">
     <value>Руководство пользователя</value>
   </data>
   <data name="NameFieldLabel" xml:space="preserve">
-    <value>Название:</value>
+    <value>Название и ссылка:</value>
+  </data>
+  <data name="NameFieldPlaceholder" xml:space="preserve">
+    <value>(название)</value>
   </data>
   <data name="NextButton" xml:space="preserve">
     <value>OK</value>
@@ -323,12 +329,13 @@
   <data name="Tip01" xml:space="preserve">
     <value>Здесь Вы можете задать настройки уведомлений.
 
-Обратите внимание, что переход к настройкам и полным текстам оповещений будет приостанавливать фоновую службу. Она продолжит работу после закрытия / сворачивания формы настроек</value>
+Переход к настройкам и полным текстам оповещений будет приостанавливать фоновую службу. Она продолжит работу после закрытия / сворачивания формы настроек</value>
   </data>
   <data name="Tip02" xml:space="preserve">
     <value>ВНИМАНИЕ!
 1. Приложение может получать уведомления, только если устройство подключено к электросети и/или экран не находится в спящем режиме.
-2. Некоторые устройства требуют ручной настройки атрибутов уведомлений (вибро, свет, звуки). Настройки приложения могут не действовать</value>
+2. Некоторые устройства требуют ручной настройки атрибутов уведомлений (вибро, свет, звуки). Настройки приложения могут не действовать.
+3. Некоторые устройства требуют ручного разрешения на доступ в интернет (например, если активен режим экономии интернет-трафика)</value>
   </data>
   <data name="Tip03" xml:space="preserve">
     <value>Для использования этой функции укажите какое-либо ключевое слово из целевого участка сайта в поле «Начало»</value>
