--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -357,7 +357,7 @@
   </data>
   <data name="Tip02" xml:space="preserve">
     <value>ВНИМАНИЕ!
-1. Приложение может получать уведомления, только если устройство подключено к электросети и/или экран не находится в спящем режиме.
+1. Приложение может получать уведомления, только если устройство подключено к электросети и/или экран не находится в спящем режиме (неактуально для Android 10).
 2. Некоторые устройства требуют ручной настройки атрибутов уведомлений (вибро, свет, звуки). Настройки приложения могут не действовать.
 3. Некоторые устройства требуют ручного разрешения на доступ в интернет (например, если активен режим экономии интернет-трафика)</value>
   </data>
