--- a/src/android/UniNotifier_en_us.resx
+++ b/src/android/UniNotifier_en_us.resx
@@ -123,9 +123,6 @@
   <data name="AcceptButton" xml:space="preserve">
     <value>Accept</value>
   </data>
-  <data name="AddButton" xml:space="preserve">
-    <value>Add as new</value>
-  </data>
   <data name="ADPPage" xml:space="preserve">
     <value>Policy and EULA</value>
   </data>
@@ -147,9 +144,6 @@
   <data name="AllowVibroSwitch" xml:space="preserve">
     <value>Vibration</value>
   </data>
-  <data name="ApplyButton" xml:space="preserve">
-    <value>Update selected</value>
-  </data>
   <data name="AppPage" xml:space="preserve">
     <value>App webpage</value>
   </data>
@@ -163,7 +157,7 @@
     <value>Log</value>
   </data>
   <data name="CommandButton1" xml:space="preserve">
-    <value>Request all</value>
+    <value>Refresh</value>
   </data>
   <data name="CommandButton2" xml:space="preserve">
     <value>Settings</value>
@@ -186,9 +180,6 @@
   <data name="DeclineButton" xml:space="preserve">
     <value>Read</value>
   </data>
-  <data name="DeleteButton" xml:space="preserve">
-    <value>Delete selected</value>
-  </data>
   <data name="DeleteMessage" xml:space="preserve">
     <value>Delete selected notification?</value>
   </data>
@@ -207,17 +198,14 @@
   <data name="EndingFieldLabel" xml:space="preserve">
     <value>Ending:</value>
   </data>
-  <data name="FindDelimitersButton" xml:space="preserve">
-    <value>Find</value>
+  <data name="FindDisclaimer" xml:space="preserve">
+    <value>For using this function specify some keyword from needed site's area in “Beginning” field</value>
   </data>
   <data name="FontSizeLabel" xml:space="preserve">
     <value>Font size: </value>
   </data>
   <data name="FreqFieldLabel" xml:space="preserve">
     <value>Update frequency: {0:D} minutes</value>
-  </data>
-  <data name="KeywordNotSpecified" xml:space="preserve">
-    <value>Search keyword is missing in “Beginning” field</value>
   </data>
   <data name="LanguageLabel" xml:space="preserve">
     <value>Interface language:</value>
@@ -233,9 +221,6 @@
   </data>
   <data name="LinkFieldPlaceholder" xml:space="preserve">
     <value>(URL)</value>
-  </data>
-  <data name="LoadTemplateButton" xml:space="preserve">
-    <value>Get</value>
   </data>
   <data name="LogPage" xml:space="preserve">
     <value>Notifications log</value>
@@ -286,6 +271,12 @@
   <data name="ReadModeLabel" xml:space="preserve">
     <value>Read mode</value>
   </data>
+  <data name="RequestOnWakeSwitch" xml:space="preserve">
+    <value>Automatic request when running on battery</value>
+  </data>
+  <data name="ResetTips" xml:space="preserve">
+    <value>Show tips again</value>
+  </data>
   <data name="RestartApp" xml:space="preserve">
     <value>Restart the application</value>
   </data>
@@ -304,15 +295,6 @@
   <data name="ServiceSettingsLabel" xml:space="preserve">
     <value>Background service:</value>
   </data>
-  <data name="ShareButton" xml:space="preserve">
-    <value>Share</value>
-  </data>
-  <data name="ShareDisclaimer" xml:space="preserve">
-    <value>Please note that app adds links to information sources to notifications you share (in order to respect the rights of authors). It is recommended not to remove them when distributing texts using this function</value>
-  </data>
-  <data name="ShareTemplateButton" xml:space="preserve">
-    <value>Share</value>
-  </data>
   <data name="SolutionPage" xml:space="preserve">
     <value>Notifications settings</value>
   </data>
@@ -329,24 +311,66 @@
     <value>Where to get the settings:</value>
   </data>
   <data name="Tip01" xml:space="preserve">
-    <value>Here you can configure notifications settings.
+    <value>Welcome to UniNotifier! Here you can configure the notification service.
 
-Going to settings and main log will pause the background service. It will continue working after closing / hiding this window</value>
+Going to these settings and the main log will pause the background service watching for updates. It will continue to work after closing / minimizing the application</value>
   </data>
-  <data name="Tip02" xml:space="preserve">
-    <value>WARNING!
-1. App can only receive notifications if your device is on charge and / or the screen is not in sleep mode (not actual for Android 10).
-2. Some devices require manual setting of notification attributes (vibro, lights, sounds). App settings may not work.
-3. Some devices require manual unlocking of internet access (f.e., in case of internet traffic saving mode) for the app</value>
+  <data name="Tip02_1" xml:space="preserve">
+    <value>Warning!
+</value>
+  </data>
+  <data name="Tip02_2" xml:space="preserve">
+    <value>• App can only receive notifications if your device is on charge and / or the screen is not in sleep mode.
+</value>
+  </data>
+  <data name="Tip02_3" xml:space="preserve">
+    <value>• Your device requires manual setting of notification attributes (vibro, lights, sounds). Don't forget to set them.
+</value>
+  </data>
+  <data name="Tip02_4" xml:space="preserve">
+    <value>• Some devices are requiring manual unlocking of internet access (f.e., in case of internet traffic saving mode) for the app. Check it if you will not get notifications</value>
   </data>
   <data name="Tip03" xml:space="preserve">
-    <value>For using this function specify some keyword from needed site's area in “Beginning” field</value>
+    <value>Detailed instructions for setting up the service are available on YouTube. Swipe to the right of this screen to app details page and select the video user guide.
+
+The notifications log is available on the left of this settings screen</value>
   </data>
-  <data name="Tip04" xml:space="preserve">
-    <value>Detailed instructions for setting up the service are available on YouTube. Swipe right to the app details page and select the video user manual</value>
+  <data name="Tip04_1" xml:space="preserve">
+    <value>This button allows you to apply changes performed below to the currently selected notification</value>
+  </data>
+  <data name="Tip04_10" xml:space="preserve">
+    <value>This button allows you to select the notification, the source of which will be opened in browser</value>
+  </data>
+  <data name="Tip04_11" xml:space="preserve">
+    <value>This button allows you to select notification for configuring</value>
+  </data>
+  <data name="Tip04_12" xml:space="preserve">
+    <value>This option, when running on battery power, allows you to automatically refresh the status of alerts when the device is unlocked.
+The specified update period will work only when the screen is active; in standby mode it will be ignored.
+When the charger is connected, this option will have no effect</value>
+  </data>
+  <data name="Tip04_2" xml:space="preserve">
+    <value>This button allows you to share settings of the current notification</value>
+  </data>
+  <data name="Tip04_3" xml:space="preserve">
+    <value>This button allows you to add new notification with settings presented below</value>
+  </data>
+  <data name="Tip04_4" xml:space="preserve">
+    <value>This button allows you to remove selected notification</value>
+  </data>
+  <data name="Tip04_5" xml:space="preserve">
+    <value>This button allows you to load settings from notification template or shared notification</value>
+  </data>
+  <data name="Tip04_6" xml:space="preserve">
+    <value>This button allows you to automatically find delimiters for the new notification (see user manual for details)</value>
+  </data>
+  <data name="Tip04_7" xml:space="preserve">
+    <value>These buttons allow you to select what notification (starting at the top of log) will be shared.
+
+Please note that app adds links to information sources to notifications you share (in order to respect the rights of authors). It is recommended not to remove them when distributing texts using this function</value>
   </data>
   <data name="TipHeader01" xml:space="preserve">
-    <value>Hello, dear user!</value>
+    <value>Tip #</value>
   </data>
   <data name="WebIsUnavailable" xml:space="preserve">
     <value>This device has no web browser</value>
